--- a/day1/styles.css
+++ b/day1/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 .faq-contain {
-    border-bottom: 1px solid #eee;
+    border-bottom: 3px solid #eee;
 }
 
 .faq-contain:last-child {
@@ -73,7 +73,7 @@ body {
 }
 
 .answer.show {
-    max-height: 500px; /* Adjust as necessary for content height */
+    max-height: 500px; 
     padding: 20px;
 }
 
