--- a/day2-Product_Design_Cart/deteails.css
+++ b/day2-Product_Design_Cart/deteails.css
@@ -10,8 +10,15 @@ body{
     line-height: 1.5;
 }
 .card-wrapper{
-    max-width: 1100px;
-    margin: 0 auto;
+    position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 70%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 img{
     width: 100%;
