--- a/day2-Product_Design_Cart/styles.css
+++ b/day2-Product_Design_Cart/styles.css
@@ -290,20 +290,14 @@ body {
 }
 
 .product-detail {
-  background-color: #f9f9f9;
-
-  border-radius: 8px;
   max-width: 600px;
-
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  font-family: Arial, sans-serif;
-  color: #333;
+ 
 }
 
 .product-detail h2 {
   font-size: 24px;
   margin-bottom: 10px;
-  color: #007bff; /* Primary color */
+ 
   border-bottom: 2px solid #007bff;
   padding-bottom: 5px;
 }
@@ -318,15 +312,14 @@ body {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  font-family: Arial, sans-serif;
+
   font-size: 16px;
   line-height: 1.5;
-  background-color: #f9f9f9;
+
   padding: 10px 20px;
   border-radius: 5px;
   max-width: 400px;
   margin: 20px auto;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .product-details li {
@@ -334,6 +327,7 @@ body {
   justify-content: space-between;
   padding: 5px 0;
   border-bottom: 1px solid #ddd;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .product-details li:last-child {
@@ -347,6 +341,7 @@ body {
 
 .product-details span {
   color: #555;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .product-details li:nth-child(odd) {
@@ -358,11 +353,11 @@ body {
 }
 
 .product-details li strong {
-  color: #007bff; /* Primary color */
+  color: #007bff;
 }
 
 .product-details li span {
-  color: #28a745; /* Secondary color */
+  color: #28a745;
 }
 
 .purchase-info {
@@ -371,12 +366,9 @@ body {
   align-items: end;
 }
 
-
-
 .btn:hover {
   background-color: #0056b3;
 }
-
 
 .img-zoom {
   cursor: zoom-in;
