--- a/day2-Product_Design_Cart/styles.css
+++ b/day2-Product_Design_Cart/styles.css
@@ -162,7 +162,7 @@ body {
   cursor: pointer;
 }
 
-/* Card Styles */
+
 .card-wrapper {
   display: flex;
   justify-content: center;
@@ -174,7 +174,7 @@ body {
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+ 
 }
 
 .product-imgs {
@@ -279,14 +279,17 @@ body {
 }
 
 .last-price {
-  text-decoration: line-through;
-  color: #555;
+  text-decoration: line-through red 1px;
+  color: black;
+  font-family:Arial, Helvetica, sans-serif;
+  padding-bottom: 5px;
 }
 
 .new-price {
   font-size: 20px;
   font-weight: bold;
-  color: #007bff;
+  color: blue;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .product-detail {
@@ -297,8 +300,8 @@ body {
 .product-detail h2 {
   font-size: 24px;
   margin-bottom: 10px;
- 
-  border-bottom: 2px solid #007bff;
+ font-family: 'Courier New', Courier, monospace;
+  border-bottom: 1px solid gray;
   padding-bottom: 5px;
 }
 .product-detail p {
@@ -306,6 +309,7 @@ body {
   line-height: 1.6;
   margin-top: 0;
   color: #555;
+  font-family:'Times New Roman', Times, serif;
 }
 
 .product-details {
@@ -327,7 +331,7 @@ body {
   justify-content: space-between;
   padding: 5px 0;
   border-bottom: 1px solid #ddd;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  
 }
 
 .product-details li:last-child {
@@ -337,6 +341,7 @@ body {
 .product-details strong {
   font-weight: bold;
   color: #333;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .product-details span {
