--- a/day3-progress_bar/styles.css
+++ b/day3-progress_bar/styles.css
@@ -1,12 +1,12 @@
 body {
-  font-family: Arial, sans-serif;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   margin: 0;
-  background-color: #f4f4f9;
+  background-color: rgb(236, 243, 246);
 }
 
 .progress-container {
@@ -22,7 +22,7 @@ body {
   left: 0;
   width: 100%;
   height: 4px;
-  background-color: #e0e0e0;
+  background-color: #d5caca;
   transform: translateY(-50%);
   z-index: 1;
 }
@@ -35,7 +35,7 @@ body {
   height: 4px;
   background-color: #4caf50;
   transform: translateY(-50%);
-  transition: width 0.3s ease;
+  transition: width 0.8s ease;
   z-index: 2;
 }
 
@@ -49,7 +49,7 @@ body {
 .step {
   width: 40px;
   height: 40px;
-  background-color: #e0e0e0;
+  background-color: #c3baba;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -57,7 +57,7 @@ body {
   font-size: 16px;
   color: #fff;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.8s ease;
   z-index: 4;
 }
 
