--- a/day5-star rating/styles.css
+++ b/day5-star rating/styles.css
@@ -5,7 +5,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: azure;
+  background-color: rgb(218, 240, 240);
 }
 
 .star {
