--- a/day5-star rating/styles.css
+++ b/day5-star rating/styles.css
@@ -1,18 +1,21 @@
-body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: rgb(218, 240, 240);
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .star {
-  font-size: 30px;
-  color: gray;
+    display: flex;
+    cursor: pointer;
 }
 
-.checked:hover {
-  color: yellow;
+.fa-star {
+    font-size: 30px;
+    color: #ccc; 
+}
+
+.fa-star.checked {
+    color: gold; 
 }
