--- a/day5-star rating/styles.css
+++ b/day5-star rating/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,7 +13,8 @@ body{
 }
 
 .fa-star {
-    font-size: 30px;
+    padding: 5px;
+    font-size: 40px;
     color: #ccc; 
 }
 
