--- a/day6-darg_and_drop_file/styles.css
+++ b/day6-darg_and_drop_file/styles.css
@@ -35,6 +35,10 @@ body {
     font-size: 18px;
     color: #333;
 }
+.plus{
+    font-size: 30px;
+    color: #333;
+}
 
 .drop-zone__input {
     display: none;
