--- a/day6-darg_and_drop_file/styles.css
+++ b/day6-darg_and_drop_file/styles.css
@@ -38,6 +38,8 @@ body {
 .plus{
     font-size: 30px;
     color: #333;
+    border-radius: 50%;
+    background-color: #666;
 }
 
 .drop-zone__input {
