--- a/day6-darg_and_drop_file/styles.css
+++ b/day6-darg_and_drop_file/styles.css
@@ -60,17 +60,17 @@ body {
 .file-list__item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
     margin-bottom: 10px;
     background: #fafafa;
+    position: relative;
 }
 
 .file-list__item img {
-    max-width: 50px;
-    max-height: 50px;
+    max-width: 100px;
+    max-height: 100px;
     object-fit: cover;
     border-radius: 4px;
     margin-right: 10px;
@@ -96,8 +96,11 @@ body {
     color: #fff;
     border: none;
     padding: 5px 10px;
-    border-radius: 4px;
+    border-radius:50%;
     cursor: pointer;
+    position: absolute;
+    top: -2px;
+    right: 0px;
 }
 
 .remove-button:hover {
